<resources>
    <!-- Main Activity -->
    <string name="app_name">AniLista</string>
    <string name="tab_home">Home</string>
    <string name="tab_search">Search</string>
    <string name="tab_account">Account</string>

    <!-- Toolbar -->
    <string name="openings">Openings</string>
    <string name="endings">Endings</string>
    <string name="active_genre">Action</string>
    <string name="toggle_episodes">Filter</string>

    <!-- Search -->
    <string name="search_bar_text">Search for anime, manga, etc.</string>
    <string name="search_not_found">I couldn\'t find what you were looking for.</string>
    <string name="search_not_found_sub">My chakra is not enough yet...</string>
    <string name="search_characters">Search characters...</string>
    <string name="search_roles">Search roles...</string>

    <!-- Home -->
    <string name="today">Today</string>
    <string name="airing">Airing</string>
    <string name="popular">Popular</string>
    <string name="ranking">Ranking</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_people">Top people</string>
    <string name="season">Season</string>
    <string name="genres">Genres</string>

    <!-- Anime Detail -->
    <string name="loading_message_anime">Loading anime detail…</string>
    <string name="episodes">ep.</string>
    <string name="ranked">Ranked:</string>
    <string name="score_format">%.2f</string>
    <string name="aired">Aired:</string>
    <string name="themes">Songs</string>
    <string name="episodes_list">Episodes</string>
    <string name="synopsis">Synopsis</string>
    <string name="expand">Expand</string>
    <string name="studio">Studio:</string>
    <string name="pictures">Pictures</string>
    <string name="characters_staff"><![CDATA[Characters & Staff]]></string>
    <string name="canon">Canon</string>
    <string name="filler">Filler</string>
    <string name="recap">Recap</string>
    <string name="related">Related</string>
    <string name="recommendations">Recommendations</string>
    <string name="reviews">Reviews</string>
    <string name="adaptation">Adaptation:</string>
    <string name="side_story">Side story:</string>
    <string name="prequel">Prequel:</string>
    <string name="sequel">Sequel:</string>
    <string name="alternative_version">Alternative:</string>
    <string name="summary">Summary:</string>
    <string name="character">Character:</string>
    <string name="spin_off">Spin-off:</string>
    <string name="other">Other:</string>
    <string name="winter">Winter</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="autumn">Fall</string>
    <string name="show_more">Show more</string>
    <string name="view_all">View all</string>
    <string name="not_available">N/A</string>
    <string name="see_all_reviews">View all reviews</string>
    <string name="viewing_order">Viewing Order</string>

    <!-- Seiyu -->
    <string name="voice_acting_roles">Voice acting roles</string>
    <string name="staff_positions">Anime staff positions</string>

    <!-- Filters -->
    <string name="filters_apply">APPLY</string>
    <string name="filters_filters">Filters</string>
    <string name="score">Score</string>
    <string name="score2">Score:</string>
    <string name="filters_score">Not selected</string>
    <string name="filters_score_near">Near</string>
    <string name="filters_result">Filtered results</string>
    <string name="filters_clear">CLEAR</string>
    <string name="filters_order">Order by</string>
    <string name="filters_sort">Sort by</string>
    <string name="filters_order_title">Title</string>
    <string name="filters_order_startdate">Start Date</string>
    <string name="filters_order_enddate">End Date</string>
    <string name="filters_order_updatedate">Update Date</string>
    <string name="filters_order_score">Score</string>
    <string name="filters_order_type">Type</string>
    <string name="filters_order_episodes">Episodes</string>
    <string name="filters_sort_asc">Ascending</string>
    <string name="filters_sort_desc">Descending</string>
    <string name="see_more">See more</string>

    <!-- User -->
    <string name="anime_stats">Anime stats</string>
    <string name="completed">Completed</string>
    <string name="watching">Watching</string>
    <string name="anime_list">Anime List</string>
    <string name="manga_list">Manga List</string>
    <string name="favorites">Favorites</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="characters">Characters</string>
    <string name="people">People</string>
    <string name="user_score_format">%.0f</string>
    <string name="user_intro_label">Enter your MAL user above to see all your info.</string>
    <string name="user_not_found">I couldn\'t find the user.</string>
    <string name="user_intro_label_sub">Here you can see your MAL user</string>

    <!-- List -->
    <string name="all">All</string>
    <string name="on_hold">On Hold</string>
    <string name="dropped">Dropped</string>
    <string name="plan_to_watch">Plan to Watch</string>

    <!-- Misc -->
    <string name="preference_file_key">.PREFERENCE_FILE_KEY</string>
    <string name="fetch_error">Couldn\'t fetch data.</string>
    <string name="fetch_error_label">My power level is under 9000.</string>
    <string name="manga_module">Manga List is still in development.</string>
    <string name="stats_module">Anime statistics is still in development.</string>

    <!-- Config -->
    <string name="config_dark_mode_on">Dark Mode On</string>
    <string name="config_dark_mode_off">Dark Mode Off</string>
    <string name="config_dark_mode_system">Dark mode System</string>

    <!-- Status -->
    <string name="dialog_status_status">Status</string>
    <string name="dialog_status_score">Score</string>
    <string name="dialog_status_episodes">Episodes</string>
    <string name="dialog_status_save">Save</string>
    <string name="dialog_status_delete">Delete</string>
    <string-array name="dialog_status_array">
        <item>Watching</item>
        <item>Completed</item>
        <item>On Hold</item>
        <item>Dropped</item>
        <item>Plan to Watch</item>
    </string-array>
    <string-array name="dialog_status_score_array">
        <item>(10) Masterpiece</item>
        <item>(9) Great</item>
        <item>(8) Very Good</item>
        <item>(7) Good</item>
        <item>(6) Fine</item>
        <item>(5) Average</item>
        <item>(4) Bad</item>
        <item>(3) Very Bad</item>
        <item>(2) Horrible</item>
        <item>(1) Appalling</item>
        <item>-- No Score --</item>
    </string-array>

    <!-- Support Dialog -->
    <string name="support_text">If you liked the app please click the \'Yes!\' button to support the project!\n I will really appreciate it!</string>
    <string name="support_link">https://redixsoft.wixsite.com/anilista</string>
    <string name="support_dont_show">Don\'t show this anymore</string>
    <string name="support_yes">Yes!</string>
    <string name="support_close">Close</string>

</resources>
