<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="14dp">

    <LinearLayout
        android:id="@+id/anime_adaptation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginTop="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/adaptation"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/anime_adaptation_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:nestedScrollingEnabled="false"
            bind:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/anime_sidestory_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginTop="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/side_story"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/anime_sidestory_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:nestedScrollingEnabled="false"
            bind:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/anime_prequel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginTop="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/prequel"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/anime_prequel_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:nestedScrollingEnabled="false"
            bind:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/anime_sequel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginTop="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/sequel"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/anime_sequel_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:nestedScrollingEnabled="false"
            bind:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/anime_alternative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginTop="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/alternative_version"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/anime_alternative_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:nestedScrollingEnabled="false"
            bind:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/anime_summary_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginTop="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/summary"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/anime_summary_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:nestedScrollingEnabled="false"
            bind:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/anime_character_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginTop="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/character"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/anime_character_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:nestedScrollingEnabled="false"
            bind:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/anime_spinoff_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginTop="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/spin_off"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/anime_spinoff_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:nestedScrollingEnabled="false"
            bind:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/anime_other_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginTop="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/other"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/anime_other_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:nestedScrollingEnabled="false"
            bind:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

    </LinearLayout>

</LinearLayout>