<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/filters"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/bottom_sheet_behavior"
    app:behavior_hideable="true"
    app:behavior_peekHeight="96dp"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_rounded_4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/filters_main_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/spinnaker"
            android:padding="5dp"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/filters_filters"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <View
                android:layout_width="5dp"
                android:layout_height="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="7dp"
                android:background="@drawable/bg_activated"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:fontFamily="@font/spinnaker"
                android:text="@string/genres"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/filters_list_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingStart="15dp"
            android:clipToPadding="false"/>

    </LinearLayout>

    <TextView
        android:id="@+id/filters_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@drawable/bg_button"
        android:elevation="3dp"
        android:fontFamily="@font/spinnaker"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        android:textStyle="bold"
        android:text="@string/filters_apply"/>

</RelativeLayout>